<resources>
    <string name="app_name">DH Desafio 3</string>
    <string name="splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="welcome_title">Welcome to the Marvel HQ\'s</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="field_must_not_be_empty">Field must not be empty</string>
    <string name="insert_valid_email">Insert a valid email</string>
    <string name="password_invalid">Password must contain at least:\n- 8 Characters
        \n- 1 Uppercase &amp; 1 Lowercase letter\n- 1 Number \n- 1 Special Character</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password_not_a_match">Password is not a match</string>
    <string name="published">Published:</string>
    <string name="price">Price:</string>
    <string name="pages">Pages:</string>
</resources>